[gd_scene load_steps=13 format=2]

[ext_resource path="res://Src/Test/WarpArea.gd" type="Script" id=1]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/WarpDevice.png-4e8530b38f17cbfd0e0210658e136c90.stex"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="CanvasItemMaterial" id=21]
blend_mode = 1

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 0.481752, 1 )
colors = PoolColorArray( 0.0115613, 0.599717, 0.986566, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 20 )

[sub_resource type="Curve" id=22]
min_value = -1024.0
max_value = 200.0
_data = [ Vector2( 0, -159.167 ), 0.0, 1711.89, 0, 0, Vector2( 0.628931, -1024 ), 334.954, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=23]
curve = SubResource( 22 )

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 0.627123 ), 0.0, 2.35498, 0, 0, Vector2( 0.408805, 0.557554 ), 0.227273, 0.227273, 0, 0, Vector2( 0.786164, 0 ), -2.86429, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=24]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=18]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.03
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 200.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 23 )
scale = 10.0
scale_random = 0.5
scale_curve = SubResource( 24 )
color_ramp = SubResource( 19 )
hue_variation = 1.0
hue_variation_random = 0.05

[node name="WarpArea" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 4, 4 )
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 0.25

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 21 )
amount = 10
local_coords = false
process_material = SubResource( 18 )
[connection signal="body_entered" from="." to="." method="_on_WarpArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WarpArea_body_exited"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
